# chatgpt-translator

./: Cargo.toml  README.md
assets/: default-system-prompt.txt  default-user-prompt.txt
src/: document.rs  lib.rs  main.rs  model.rs  state.rs  translator.rs
