[package]
name = "chatgpt-translator"
version = "0.7.0"
edition = "2021"
description = "An OpenAI-powered Markdown document translator. Translate your clipboard text into from/to any language."

[[bin]]
name = "ct"
path = "src/main.rs"

[lib]
name = "chatgpt_translator"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
async-openai = "0.23"
clap = { version = "4.5", default-features = false, features = ["std", "help", "color", "wrap_help", "derive", "env"] }
tokio = { version = "1.39", default-features = false, features = ["rt-multi-thread"] }
markdown-split = { git = "https://github.com/0x6b/markdown-split", tag = "v0.3.1" }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
clap-verbosity-flag = "2.2"
tracing-log = "0.2"
