[package]
name = "chatgpt-translator"
version = "0.11.1"
edition = "2021"
description = "An OpenAI-powered Markdown document translator. Translate your clipboard/stdin text into from/to any language."

[[bin]]
name = "ct"
path = "src/main.rs"

[lib]
name = "chatgpt_translator"
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0"

# Clipboard management
stdin_or_clipboard = { git = "https://github.com/0x6b/stdin_or_clipboard", tag = "v0.5.0" }

# OpenAI API
async-openai = "0.24"

# Command line arguments
clap = { version = "4.5", default-features = false, features = ["std", "help", "color", "wrap_help", "derive", "env"] }

# Async runtime
tokio = { version = "1.40", default-features = false, features = ["rt-multi-thread"] }

# Markdown handling
markdown = "1.0.0-alpha"
markdown-split = { git = "https://github.com/0x6b/markdown-split", tag = "v0.3.1" }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
clap-verbosity-flag = "2.2"
tracing-log = "0.2"
